# data-masking-libary

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md  SETUP_COMPLETE.md  final_demo.sh  pyproject.toml  requirements-dev.txt  test_setup.py
examples/: README.md  basic_usage.py  comprehensive_demo.py  final_masked.json  redacted_output.json  sample_config.json  sample_data.json
src/data_masker/: __init__.py  cli.py  config.py  detectors.py  masker.py  patterns.py
tests/: test_cli.py  test_detectors.py  test_masker.py
